--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" type="text/css" href="bower_components/leaflet/dist/leaflet.css"/>
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" type="text/css" href="public/css/styles.css">
+        <link rel="stylesheet" type="text/css" href="public/jk-carousel.min.css">
         <link rel="stylesheet" type="text/css" href="owfont/css/owfont-regular.min.css">
         <link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="bower_components/leaflet.markercluster/dist/MarkerCluster.css">
@@ -49,6 +50,8 @@
         <script type="text/javascript" src="bower_components/socket.io-client/socket.io.js"></script>
         <script type="text/javascript" src="bower_components/angular-socket-io/socket.min.js"></script>
         <script type="text/javascript" src="bower_components/angular-notification-icons/dist/angular-notification-icons.min.js"></script>
+        <script type="text/javascript" src="public/jk-carousel.min.js"></script>
+        <script type="text/javascript" src="home/background.js"></script>
 
         <!-- Your application bootstrap  -->
         <script type="text/javascript" src="app.js"></script>
